  paths.
  (Nicolás Ojeda Bär, report by Jason Gross, review by Gabriel Scherer)

- #11727: Ensure push_defaults can push past module patterns, fixing an
  currying optimisation accidentally disabled by #10340.
  (Stephen Dolan, review by Gabriel Scherer)

- #11732: Ensure that types from packed modules are always generalised
  (Stephen Dolan and Leo White, review by Jacques Garrigue)

OCaml 5.0
---------

### Language features:

### Runtime system:

- #11400: Runtime events counters fixes
  Fixes mismatch between OCaml and C APIs, removes events from 4.x that
  are not present in the 5.0 GC and adds some missing probes.
  (Sadiq Jaffer, review by Gabriel Scherer, Florian Angeletti)

- #11368: Runtime events buffer size OCAMLRUNPARAMS fix
  The runtime events buffer size can now be set via the 'e' OCAMLRUNPARAM.
  This is previously mistakenly enabled/disabled tracing instead.
  (Sadiq Jaffer, review by KC Sivaramakrishnan, David Allsopp, Damien Doligez)

- #11308: Add environment variable to preserve runtime_events after exit
  If the environment variable OCAML_RUNTIME_EVENTS_PRESERVE exists then the
  runtime will not remove the runtime events ring buffers at exit. This
  makes tracing very short running programs more reliable.
  (Sadiq Jaffer, review by KC Sivaramakrishnan)

- #10964: Ring-buffer based runtime tracing (runtime_events)
  Runtime_events is a very low overhead runtime tracing system designed for
  continuous monitoring of OCaml applications.
  (Sadiq Jaffer, review by Anil Madhavapeddy, Enguerrand Decorne,
  Richard Warburton, Gabriel Scherer, Sabine Schmaltz, Florian Angeletti,
  Patrick Ferris, Tom Kelly)

- #10831: Multicore OCaml
  (The multicore team, caml-devel and more)

* #10723: do not use `-flat-namespace` linking for macOS.
  (Carlo Cabrera, review by Damien Doligez)

* #10863, #10933: Remove support for old, unprefixed C runtime function names
  such as `alloc`.  The new names prefixed with `caml_` must be used instead,